--- a/src/main/resources/layout.fxml
+++ b/src/main/resources/layout.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Separator?>
@@ -64,6 +65,7 @@
                </children>
             </HBox>
             <Button fx:id="startButton" mnemonicParsing="false" onAction="#onStart" text="Start" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <ProgressBar fx:id="processProgress" prefWidth="200.0" progress="0.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
          </children>
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" />
@@ -79,6 +81,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints vgrow="SOMETIMES" />
             <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <opaqueInsets>
             <Insets bottom="10.0" left="20.0" right="20.0" />
